--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ecommerce Project</title>
+  <title>ProjectMeal</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -19,6 +19,7 @@
 			<%= yield %>
 		</div>
 	</div>
+	<%= render 'layouts/footer' %>
+	<% debug(params) if Rails.env.development? %> 
 </body>
 </html>
-
