--- a/app/views/org_people/edit.html.erb
+++ b/app/views/org_people/edit.html.erb
@@ -2,7 +2,7 @@
 	<% provide(:title, "Edit user")%>
 	<center><h1>Update your profile</h1></center>
 	<%= form_for(@person) do |f| %>
-
+		<%= render 'shared/error_messages' %>
 		<div class="col-md-12">
 			<% # Below will render our contactfields layout partial %>
 			<%= render 'layouts/contactfields', f: f %>
